# atlassian-trinity

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: bitbucket.md  confluence.md  jira.md
src/trinity/: __init__.py  bb_compat.py  cli.py
src/trinity/base/: __init__.py  auth.py  client.py  exceptions.py
src/trinity/bitbucket/: __init__.py  api.py
src/trinity/bitbucket/commands/: __init__.py  activity.py  approve.py  comment.py  create.py  decline.py  diff.py  list.py  merge.py  pipelines.py  show.py  update.py
src/trinity/confluence/: __init__.py  add_comment.py  create_page.py  get_children.py  get_page.py  get_spaces.py  list_space_pages.py  search.py  update_page.py
src/trinity/jira/: __init__.py  add_comment.py  create_issue.py  edit_issue.py  get_boards.py  get_issue.py  get_release_issues.py  get_sprint_issues.py  get_sprints.py  get_status_history.py  get_transitions.py  get_worklogs.py  list_projects.py  lookup_user.py  search.py  transition_issue.py
tests/: conftest.py  test_bb_compat_resolve.py  test_bb_resolution.py  test_bitbucket_read_only.py  test_confluence_read_only.py  test_jira_read_only.py  test_url_resolution.py
